# oxvelte

./: .fixtures.sha256  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  THIRD_PARTY_NOTICES  eslint.tape  oxvelte.tape  prepare.sh  program.md  verify_fixtures.sh
.claude/skills/convert-eslint-config/: SKILL.md
.github/workflows/: ci.yml  release.yml
demo/: .race-time  bench  demo.tape  eslint.tape  loop-oxvelte.sh  oxvelte.tape  run-eslint-timed.sh  run-eslint.sh  run-oxvelte-timed.sh  run-oxvelte.sh  timer.sh
docs/: custom-rules.md
examples/custom-rules/: no-div-without-class.js
fixtures/linter/button-has-type/invalid/: empty-type-errors.yaml  empty-type-input.svelte
fixtures/linter/button-has-type/valid/: spread-input.svelte  test01-input.svelte
fixtures/linter/derived-has-same-inputs-outputs/invalid/: svelte01-input.svelte
fixtures/linter/derived-has-same-inputs-outputs/valid/: svelte01-input.svelte
fixtures/linter/html-self-closing/invalid/: test01-output.svelte
fixtures/linter/no-store-async/valid/: svelte01-input.svelte
npm/@oxvelte/cli-darwin-arm64/: README.md  package.json
npm/@oxvelte/cli-darwin-x64/: README.md  package.json
npm/@oxvelte/cli-linux-arm64-gnu/: README.md  package.json
npm/@oxvelte/cli-linux-x64-gnu/: README.md  package.json
npm/@oxvelte/cli-win32-x64-msvc/: README.md  package.json
npm/@oxvelte/lint/: package.json
npm/oxvelte/: package.json
scripts/: build-npm.sh  release.sh
skills/migrate-to-oxvelte/: SKILL.md
skills/migrate-to-oxvelte/references/: RULES.md
src/: ast.rs  config.rs  custom_rules.rs  lib.rs  main.rs
src/linter/: mod.rs
src/linter/rules/: block_lang.rs  button_has_type.rs  comment_directive.rs  consistent_selector_style.rs  derived_has_same_inputs_outputs.rs  experimental_require_slot_types.rs  experimental_require_strict_events.rs  first_attribute_linebreak.rs  html_closing_bracket_new_line.rs  html_closing_bracket_spacing.rs  html_quotes.rs  html_self_closing.rs  indent.rs  infinite_reactive_loop.rs  max_attributes_per_line.rs  max_lines_per_block.rs  mod.rs  mustache_spacing.rs  no_add_event_listener.rs  no_at_debug_tags.rs  no_at_html_tags.rs  no_dom_manipulating.rs  no_dupe_else_if_blocks.rs  no_dupe_on_directives.rs  no_dupe_style_properties.rs  no_dupe_use_directives.rs  no_dynamic_slot_name.rs  no_export_load_in_svelte_module_in_kit_pages.rs  no_extra_reactive_curlies.rs  no_goto_without_base.rs  no_ignored_unsubscribe.rs  no_immutable_reactive_statements.rs  no_inline_styles.rs  no_inner_declarations.rs  no_inspect.rs  no_navigation_without_base.rs  no_navigation_without_resolve.rs  no_not_function_handler.rs  no_object_in_text_mustaches.rs  no_raw_special_elements.rs  (+40 more)
src/parser/: css.rs  expression.rs  mod.rs  selector.rs  serialize.rs  template.rs
testbeds/: compare.py  compare.sh  comparison-results.txt  immich-web-oxvelte.json  kit-oxvelte.json
testbeds/_eslint-runner/: eslint.config.js  package-lock.json  package.json
(+9 files in other folders)
