[package]
name = "oxvelte"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A fast Svelte linter written in Rust — drop-in replacement for eslint-plugin-svelte, 4-25x faster"
repository = "https://github.com/tolgaouz/oxvelte"
homepage = "https://github.com/tolgaouz/oxvelte"
keywords = ["svelte", "linter", "lint", "eslint", "oxc"]
categories = ["development-tools", "command-line-utilities"]

[lib]
name = "oxvelte"
path = "src/lib.rs"

[[bin]]
name = "oxvelte"
path = "src/main.rs"

[features]
default = []
custom-rules = ["dep:boa_engine"]

[dependencies]
oxc = { version = "*", features = ["full", "serialize"] }
oxc_diagnostics = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
rustc-hash = "2"
rayon = "1"
atty = "0.2"
boa_engine = { version = "0.20", optional = true }
selectors = "0.37.0"
precomputed-hash = "0.1.1"
cssparser = "0.36"

[dev-dependencies]
insta = { version = "1", features = ["json"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
